# QInterpreter

./: .gitignore  CMakeLists.txt  Constants.h  ErrorController.cpp  ErrorController.h  Lexer.l  Parser.y  Printer.cpp  README.md  Scanner.l  SymbolTable.cpp  SymbolTable.h  expresiones.y  file.q  lexico.l  makefile
examples/: BellStateZZMeasurement.q  BitFlipEncoderAndDecoder.q  BitFlipEncoderAndDecoderComplex.q  EncoderIntoFlipBitCode.q  PlaquetteX.q
include/: Constants.h  ErrorController.h  Expression.h  Lexer.h  Parser.h  Printer.h  QuantumAPIService.h  SymbolTable.h
src/: ErrorController.cpp  Expression.cpp  Lexer.cpp  Parser.cpp  Printer.cpp  QuantumAPIService.cpp  SymbolTable.cpp  expresiones.c  lexico.l  main.cpp
vc/: README.txt
vc/QInterpreter/: QInterpreter.sln  pre_build_steps.bat  test_me.bat
vc/QInterpreter/QInterpreter/: QInterpreter.vcxproj  QInterpreter.vcxproj.filters
