CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

# SET( CMAKE_CXX_FLAGS 	"${CMAKE_CXX_FLAGS} -std=c++11" )
SET( PROJ_NAME		"QInterpreter" )
SET( PROJ_PATH		${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH	${CMAKE_BINARY_DIR} )
SET( PROJ_LIBRARIES	"curl" )
SET( PROJ_INCLUDES 	"include" )

FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
#FILE( GLOB_RECURSE PROJ_HEADERS include/*.h )

PROJECT( ${PROJ_NAME} )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )

FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)

SET_SOURCE_FILES_PROPERTIES( ${CMAKE_CURRENT_BINARY_DIR}/Parser.c ${CMAKE_CURRENT_BINARY_DIR}/Lexer.yy.c 	PROPERTIES LANGUAGE CXX )
BISON_TARGET(Parser Parser.y ${CMAKE_CURRENT_BINARY_DIR}/Parser.c)
FLEX_TARGET(Lexer Lexer.l ${CMAKE_CURRENT_BINARY_DIR}/Lexer.yy.c)
ADD_FLEX_BISON_DEPENDENCY(Lexer Parser)

ADD_EXECUTABLE( ${PROJ_NAME} ${BISON_Parser_OUTPUTS} ${FLEX_Lexer_OUTPUTS} ${PROJ_SOURCES} )

# Only works for CMake +3.0
SET_PROPERTY(TARGET ${PROJ_NAME} PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET ${PROJ_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
